Add simple api
